--- a/OPSC7311POE/app/src/main/res/values/colors.xml
+++ b/OPSC7311POE/app/src/main/res/values/colors.xml
@@ -2,4 +2,6 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="green">#A4C639</color>
+    <color name="Red">#ff0000</color>
 </resources>
