--- a/OPSC7311POE/app/src/main/res/layout/activity_main.xml
+++ b/OPSC7311POE/app/src/main/res/layout/activity_main.xml
@@ -45,7 +45,7 @@
             android:text="@string/ongoingtask"
             android:textAlignment="center"
             android:textColor="@color/black"
-            android:textSize="18dp" />
+            android:textSize="18sp" />
 
         <TextView
             android:id="@+id/tvSeeAll"
@@ -55,7 +55,7 @@
             android:fontFamily="sans-serif-medium"
             android:text="@string/seeAll"
             android:textAlignment="center"
-            android:textSize="18dp" />
+            android:textSize="18sp" />
 
 
     </LinearLayout>
@@ -190,7 +190,7 @@
                     android:id="@+id/textView22"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Add"
+                    android:text="@string/add"
                     android:textAlignment="center"
                     android:textSize="12sp" />
 
