--- a/OPSC7311POE/app/src/main/res/layout/activity_timer.xml
+++ b/OPSC7311POE/app/src/main/res/layout/activity_timer.xml
@@ -21,7 +21,7 @@
         android:text="@string/timer"
         android:textAlignment="center"
         android:textColor="@color/white"
-        android:textSize="35dp" />
+        android:textSize="35sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -66,7 +66,7 @@
         android:text="@string/timer"
         android:textAlignment="center"
         android:textColor="@color/white"
-        android:textSize="35dp" />
+        android:textSize="35sp" />
 
     <Button
         android:id="@+id/button5"
@@ -157,7 +157,7 @@
                     android:id="@+id/textView22"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Add"
+                    android:text="@string/add"
                     android:textAlignment="center"
                     android:textSize="12sp" />
 
