--- a/OPSC7311POE/app/src/main/res/values/colors.xml
+++ b/OPSC7311POE/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="green">#A4C639</color>
     <color name="Red">#ff0000</color>
+    <color name="blue">#0000FF</color>
+
 </resources>
