--- a/OPSC7311POE/app/src/main/res/layout/activity_timer.xml
+++ b/OPSC7311POE/app/src/main/res/layout/activity_timer.xml
@@ -5,116 +5,85 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/skyblue"
     android:orientation="vertical"
-    tools:context=".MainActivity">
-
+    android:background="@drawable/skyblue"
+    tools:context=".Timer">
 
     <TextView
-        android:id="@+id/tvBlackBox"
-        android:layout_width="361dp"
-        android:layout_height="108dp"
+        android:id="@+id/tvTimer"
+        android:layout_width="350dp"
+        android:layout_height="60dp"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="40dp"
         android:background="@drawable/roundstyle"
         android:backgroundTint="@color/black"
-
-        android:text="" />
-
-    <SearchView
-        android:layout_width="350dp"
-        android:layout_height="35dp"
-        android:layout_gravity="center_horizontal"
-        android:background="@drawable/roundstyle"
-        android:backgroundTint="@color/white">
-
-    </SearchView>
+        android:fontFamily="sans-serif-medium"
+        android:text="@string/timer"
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        android:textSize="35sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="100dp"
         android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/tvOngoingTask"
-            android:layout_width="0dp"
+        <Button
+            android:id="@+id/btnStart"
+            android:layout_width="15dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
+            android:layout_marginRight="20dp"
             android:layout_weight="1"
-            android:fontFamily="sans-serif-medium"
-            android:text="@string/ongoingtask"
-            android:textAlignment="center"
-            android:textColor="@color/black"
-            android:textSize="18sp" />
+            android:background="@drawable/roundstyle2"
+            android:backgroundTint="@color/black"
+            android:text="@string/start"
+            android:textColor="@color/green" />
 
-        <TextView
-            android:id="@+id/tvSeeAll"
-            android:layout_width="0dp"
+        <Button
+            android:id="@+id/btnStop"
+            android:layout_width="15dp"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
             android:layout_weight="1"
-            android:fontFamily="sans-serif-medium"
-            android:text="@string/seeAll"
-            android:textAlignment="center"
-            android:textSize="18sp" />
+            android:background="@drawable/roundstyle2"
+            android:backgroundTint="@color/black"
+            android:text="@string/stop"
+            android:textColor="@color/Red" />
 
 
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="97dp"
-        android:layout_marginTop="30dp"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/btnCreateDiagram"
-            android:layout_width="70dp"
-            android:layout_height="90dp"
-            android:layout_gravity="center_horizontal"
-
-
-            android:layout_marginHorizontal="10dp"
-            android:layout_weight="1"
-            android:background="@drawable/roundstyle"
-            android:backgroundTint="#FFFFFF"
-            android:fontFamily="sans-serif-medium"
-            android:text="@string/createD"
-
-            android:textAlignment="center"
-            android:textColor="@color/black" />
-
-        <Button
-            android:id="@+id/btnRedsighn"
-            android:layout_width="70dp"
-            android:layout_height="90dp"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginHorizontal="10dp"
-
-            android:layout_weight="1"
-            android:background="@drawable/roundstyle"
-            android:backgroundTint="#FFFFFF"
-            android:fontFamily="sans-serif-condensed-medium"
-            android:text="@string/design"
-            android:textAlignment="center" />
-    </LinearLayout>
-
+    <TextClock
+        android:id="@+id/textClock2"
+        android:layout_width="350dp"
+        android:layout_height="90dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="40dp"
+        android:background="@drawable/roundstyle"
+        android:backgroundTint="@color/black"
+        android:fontFamily="sans-serif-medium"
+        android:text="@string/timer"
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        android:textSize="35sp" />
 
     <Button
-        android:id="@+id/button9"
-        android:layout_width="162dp"
-        android:layout_height="215dp"
-        android:layout_marginHorizontal="20dp"
-
-
-        android:layout_marginTop="30dp"
-        android:background="@drawable/roundstyle"
-        android:backgroundTint="#FFFFFF"
-        android:text="@string/progress" />
+        android:id="@+id/button5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:layout_gravity="center_horizontal"
+        android:background="@drawable/roundstyle2"
+        android:backgroundTint="@color/black"
+        android:text="@string/reset"
+        android:textColor="@color/white" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="170dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
@@ -245,6 +214,5 @@
         </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 
 </LinearLayout>
