Bug fixes due to bugs caused by combining into one project

--- a/OPSC7311POE/app/src/main/res/layout/activity_calendar.xml
+++ b/OPSC7311POE/app/src/main/res/layout/activity_calendar.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Calendar"
-    android:background="@drawable/BlueSkyBack">
+    android:background="@drawable/skyblue">
 
 
     <ImageView
@@ -52,7 +52,7 @@
         android:id="@+id/textView38"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/aug_19_mon"
+        android:text="@string/Date"
         android:textColor="@color/black"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
