--- a/OPSC7311POE/app/src/main/res/layout/activity_timer.xml
+++ b/OPSC7311POE/app/src/main/res/layout/activity_timer.xml
@@ -136,6 +136,7 @@
                     android:id="@+id/textView23"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
                     android:text="@string/home"
                     android:textAlignment="center"
                     android:textSize="12sp" />
