--- a/OPSC7311POE/app/src/main/res/layout/activity_weekly_summary.xml
+++ b/OPSC7311POE/app/src/main/res/layout/activity_weekly_summary.xml
@@ -75,7 +75,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-medium"
-        android:text="@string/choosG"
+        android:text="@string/choose"
         android:textSize="18sp"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="27dp"
