Added Classes for all Pages and User and Task Class

--- a/OPSC7311POE/app/src/main/res/layout/activity_main.xml
+++ b/OPSC7311POE/app/src/main/res/layout/activity_main.xml
@@ -42,7 +42,7 @@
             android:layout_gravity="center_horizontal"
             android:layout_weight="1"
             android:fontFamily="sans-serif-medium"
-            android:text="@string/ongoingtask"
+            android:text="@string/current_task"
             android:textAlignment="center"
             android:textColor="@color/black"
             android:textSize="18sp" />
