--- a/OPSC7311POE/app/src/main/res/layout/register.xml
+++ b/OPSC7311POE/app/src/main/res/layout/register.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/skyblue">
+    android:background="@drawable/skyblue"
+    tools:context=".Register">
 
 
     <ImageView
@@ -113,7 +114,7 @@
         android:layout_height="40dp"
         android:layout_marginTop="30dp"
         android:background="@color/black"
-        android:text="@string/Register"
+        android:text="@string/signup"
         android:textColor="#EFE9E9"
         android:textSize="14sp"
         android:textStyle="bold"
