--- a/OPSC7311POE/app/src/main/res/layout/activity_main.xml
+++ b/OPSC7311POE/app/src/main/res/layout/activity_main.xml
@@ -78,7 +78,6 @@
             android:background="@drawable/roundstyle"
             android:backgroundTint="#FFFFFF"
             android:fontFamily="sans-serif-medium"
-            android:text="@string/createD"
 
             android:textAlignment="center"
             android:textColor="@color/black" />
@@ -94,7 +93,6 @@
             android:background="@drawable/roundstyle"
             android:backgroundTint="#FFFFFF"
             android:fontFamily="sans-serif-condensed-medium"
-            android:text="@string/design"
             android:textAlignment="center" />
     </LinearLayout>
 
@@ -176,25 +174,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="0.25"
-                android:orientation="vertical">
-
-
-                <ImageView
-                    android:id="@+id/imageView14"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    app:srcCompat="@drawable/baseline_add_24" />
-
-                <TextView
-                    android:id="@+id/textView22"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/add"
-                    android:textAlignment="center"
-                    android:textSize="12sp" />
-
-            </LinearLayout>
+                android:orientation="vertical" />
 
             <LinearLayout
                 android:layout_width="0dp"
