--- a/OPSC7311POE/app/src/main/res/layout/activity_create_category.xml
+++ b/OPSC7311POE/app/src/main/res/layout/activity_create_category.xml
@@ -241,7 +241,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@drawable/ic_home_black_24dp" />
+                    app:srcCompat="@drawable/bottom_btn1" />
 
                 <TextView
                     android:id="@+id/tv_Home"
