--- a/OPSC7311POE/app/src/main/res/layout/activity_main.xml
+++ b/OPSC7311POE/app/src/main/res/layout/activity_main.xml
@@ -171,7 +171,7 @@
                     app:layout_constraintHorizontal_bias="0.375"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@drawable/ic_home_black_24dp" />
+                    app:srcCompat="@drawable/house" />
 
                 <TextView
                     android:id="@+id/tv_Home"
