--- a/OPSC7311POE/app/src/main/res/layout/activity_view_tasks.xml
+++ b/OPSC7311POE/app/src/main/res/layout/activity_view_tasks.xml
@@ -441,7 +441,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@drawable/ic_home_black_24dp" />
+                    app:srcCompat="@drawable/house" />
 
                 <TextView
                     android:id="@+id/tv_Home"
