--- a/OPSC7311POE/app/src/main/res/layout/activity_enter_time_sheet.xml
+++ b/OPSC7311POE/app/src/main/res/layout/activity_enter_time_sheet.xml
@@ -7,109 +7,113 @@
     android:layout_height="match_parent"
     android:background="@drawable/skyblue"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context=".enterTimeSheet">
 
 
     <TextView
-        android:id="@+id/tvBlackBox"
-        android:layout_width="361dp"
-        android:layout_height="108dp"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="50dp"
+        android:id="@+id/textView5"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="16dp"
+        android:background="@color/white"
+        android:fontFamily="sans-serif-medium"
+
+        android:text="@string/enter_hours_spent"
+        android:textAlignment="center"
+        android:textColor="@color/Red"
+        android:textSize="32sp" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="250dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="16dp"
         android:background="@drawable/roundstyle"
         android:backgroundTint="@color/black"
 
-        android:text="" />
+        android:fontFamily="sans-serif-medium"
+        android:text="@string/cat_select"
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        android:textSize="28sp" />
 
-    <SearchView
-        android:layout_width="350dp"
-        android:layout_height="35dp"
-        android:layout_gravity="center_horizontal"
+    <Spinner
+        android:id="@+id/spinId"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
         android:background="@drawable/roundstyle"
-        android:backgroundTint="@color/white">
+        android:layout_marginTop="16dp"
+        android:backgroundTint="@color/white"
+        android:padding="30dp" />
 
-    </SearchView>
+    <TextView
+        android:id="@+id/tvTaskSpinner"
+        android:layout_width="250dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/roundstyle"
+
+        android:backgroundTint="@color/black"
+        android:fontFamily="sans-serif-medium"
+        android:text="@string/task_select"
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        android:textSize="28sp" />
+    <Spinner
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/spinId2"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/roundstyle"
+        android:backgroundTint="@color/white"
+
+        android:padding="30dp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="75dp"
+        android:layout_marginTop="100dp"
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/tvOngoingTask"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:id="@+id/textView3"
+            android:layout_width="70dp"
+            android:layout_height="64dp"
             android:layout_gravity="center_horizontal"
+            android:layout_marginHorizontal="10dp"
             android:layout_weight="1"
+            android:background="@drawable/roundstyle"
+            android:backgroundTint="@color/white"
             android:fontFamily="sans-serif-medium"
-            android:text="@string/current_task"
+            android:text="@string/enter_time"
             android:textAlignment="center"
             android:textColor="@color/black"
-            android:textSize="18sp" />
+            android:textSize="28sp" />
 
         <TextView
-            android:id="@+id/tvSeeAll"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:fontFamily="sans-serif-medium"
-            android:text="@string/seeAll"
-            android:textAlignment="center"
-            android:textSize="18sp" />
-
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="97dp"
-        android:layout_marginTop="30dp"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/btnCreateDiagram"
+            android:id="@+id/textView4"
             android:layout_width="70dp"
-            android:layout_height="90dp"
+            android:layout_height="64dp"
             android:layout_gravity="center_horizontal"
             android:layout_marginHorizontal="10dp"
             android:layout_weight="1"
             android:background="@drawable/roundstyle"
-            android:backgroundTint="#FFFFFF"
+            android:backgroundTint="@color/white"
             android:fontFamily="sans-serif-medium"
-
+            android:text="@string/select_date"
             android:textAlignment="center"
-            android:textColor="@color/black" />
+            android:textColor="@color/black"
+            android:textSize="28sp" />
 
-        <Button
-            android:id="@+id/btnRedsighn"
-            android:layout_width="70dp"
-            android:layout_height="90dp"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginHorizontal="10dp"
-            android:layout_weight="1"
-            android:background="@drawable/roundstyle"
-            android:backgroundTint="#FFFFFF"
-            android:fontFamily="sans-serif-condensed-medium"
-            android:textAlignment="center" />
     </LinearLayout>
-
-
-    <Button
-        android:id="@+id/button9"
-        android:layout_width="162dp"
-        android:layout_height="215dp"
-        android:layout_marginHorizontal="20dp"
-
-
-        android:layout_marginTop="30dp"
-        android:background="@drawable/roundstyle"
-        android:backgroundTint="#FFFFFF"
-        android:text="@string/progress" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="139dp"
 
+        android:layout_marginTop="22dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
@@ -129,6 +133,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="0.25">
+
                 <ImageView
                     android:id="@+id/imageView16"
                     android:layout_width="95dp"
@@ -250,6 +255,5 @@
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 
 </LinearLayout>
